# xcode2nix

./: README  Setup.hs  xcode2nix.cabal
src/: Xcode2Nix.hs
