Name:                xcode2nix
Version:             0.1
Synopsis:            Generate Nix build instructions from an xcode build file
Homepage:            https://github.com/shlevy/xcode2nix
License:             MIT
License-file:        LICENSE
Author:              Shea Levy
Maintainer:          shea@shealevy.com
Category:            Distribution
Build-type:          Simple
Cabal-version:       >=1.2

Source-Repository head
  Type:              git
  Location:          git://github.com/shlevy/xcode2nix.git

Executable xcode2nix
  Main-is:           Xcode2Nix.hs
  hs-source-dirs:    src
  Build-Depends:     base, parsec, xcode-types
  Ghc-Options:       -Wall

